--- a/test.ipynb
+++ b/test.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from torch import nn\n",
+    "from torch import optim\n",
     "from functools import partial\n",
     "import einops\n",
     "import matplotlib.pyplot as plt\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
     "        \n",
     "    def forward(self, x):\n",
     "        x += self.att(self.norm(x))\n",
-    "        x += self.mlp(self.norm(x))[0]\n",
+    "        x += self.mlp(self.norm(x))\n",
     "        return x\n",
     "\n",
     "\n",
@@ -295,22 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of model parameters: 21128704\n"
+      "Number of model parameters: 7419904\n"
      ]
     }
    ],
    "source": [
-    "input_hw=(512, 512)\n",
+    "input_hw=(256, 256)\n",
     "patch_size=(16, 16)\n",
     "\n",
-    "x = torch.randn(size=(8, 3, *input_hw))\n",
     "\n",
     "model = TSegDiff(\n",
     "    input_hw=input_hw,\n",
@@ -324,8 +324,8 @@
     "total_params = sum(p.numel() for p in model.parameters())\n",
     "print(f\"Number of model parameters: {total_params}\")\n",
     "\n",
-    "y = model(x)\n",
-    "None"
+    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
+    "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, \"min\", factor=0.5, patience=9)\n"
    ]
   },
   {
@@ -345,7 +345,19 @@
     }
    ],
    "source": [
-    "32*32"
+    "x = torch.randn(size=(4, 3, *input_hw))\n",
+    "gt = torch.randn(size=(4, 1, *input_hw))\n",
+    "\n",
+    "\n",
+    "optimizer.zero_grad()\n",
+    "\n",
+    "y = model(x)\n",
+    "\n",
+    "loss = loss_fn(outputs, msks)\n",
+    "loss.backward()\n",
+    "optimizer.step()\n",
+    "\n",
+    "None"
    ]
   },
   {
